--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "my-ip": "^1.1.1",
     "vant": "^2.5.8",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
