--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "webpack-dev-server": "^2.9.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
